# DCTAPTemplateForGoogleSheets

./: README.md
TAPdownloader/: README.md  pyproject.toml
TAPdownloader/src/: tapdownloader.py
TAPdownloader/src/downloader/: __init__.py  __main__.py  downloader.py  parser.py
